# nira-interview

./: .gitattributes  README.md
pipeline/: .flake8  .gitignore  pyproject.toml  workspace.yaml
pipeline/pipeline/: repositories.py
pipeline/pipeline/interview_job/: interview_job.py
pipeline/pipeline/interview_job/ops/: add_gw_available_column.py  concat_transformed_buses.py  filter_buses.py  get_already_computed_buses.py  get_mw_available_for_each_bus_very_slow.py  raw_buses_to_run.py
pipeline/pipeline/interview_job/output/: 6a33a439-9328-4a0d-8a32-c01731ac0608.csv  output.csv  output_interview_job.py
pipeline/pipeline/interview_job/raw/: new_raw_buses.csv  raw_buses.csv
pipeline/pipeline/smoke_test_job/: smoke_test_job.py
