[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["achen187 <chen.andy1993@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dagster = "0.13.8"
dagit = "0.13.8"
pandas = "^1.3.5"
pyproj = "^3.3.0"
pyshp = "^2.1.3"
networkx = "^2.6.3"
Shapely = "1.7.1"
pandera = "^0.8.1"
openpyxl = "^3.0.9"
xlwt = "^1.3.0"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-mockito = "^0.0.4"
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "pipeline_tests",
]
addopts = "-ra --basetemp=pipeline_tests/tmp_test_data"

[tool.isort]
profile = "black"